# mapf-web-db-migration

./: .gitignore  README.md  pyproject.toml
dump/test/: algorithms.bson  algorithms.metadata.json  maps.bson  maps.metadata.json  scenarios.bson  scenarios.metadata.json  submissions.metadata.json  users.bson  users.metadata.json
